# aumos-tabular-engine

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.demo.yml  docker-compose.dev.yml  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: run_tabular_benchmarks.py
demo-data/: demo-run.sh
docs/: mkdocs.yml
docs/docs/: index.md  quickstart.md
docs/docs/concepts/: generators.md  privacy-budget.md  quality-gates.md
src/aumos_tabular_engine/: __init__.py  main.py  settings.py
src/aumos_tabular_engine/adapters/: __init__.py  constraint_solver.py  evaluation_framework.py  export_handler.py  local_storage.py  missing_imputer.py  privacy_wrapper.py  quality_evaluator.py  schema_analyzer.py  stub_privacy_client.py
src/aumos_tabular_engine/adapters/connectors/: __init__.py  bigquery_connector.py  databricks_connector.py  snowflake_connector.py
src/aumos_tabular_engine/adapters/generators/: __init__.py  ctgan_generator.py  deepecho_generator.py  par_generator.py  sdv_generator.py  smartnoise_generator.py  streaming_generator.py
src/aumos_tabular_engine/api/: __init__.py  dependencies.py  router.py  schemas.py
src/aumos_tabular_engine/core/: __init__.py  interfaces.py  models.py  services.py
